# SupercapNew

./: README.md
Firmware/: CMakeLists.txt  g4y_beacon_supercap.overlay  prj.conf  prj_debug.conf
Firmware/boards/G4y/g4y_beacon_supercap/: Kconfig.defconfig  g4y_beacon_supercap_nrf52805.dts
Firmware/inc/: epaper.h
Firmware/src/: GDEW0154M10.c  NfcTag.c  NfcTag.h  backlog.md  done.md  main.c
Hardware/: CalcoloResistenze.xlsx  Display.SchDoc  G4y_SuperCap.OutJob  G4y_SuperCap.PCBDwf  G4y_SuperCap.PcbDoc  G4y_SuperCap.PrjPcb  G4y_SuperCap.PrjPcbStructure  G4y_SuperCap.PrjPcbVariants  G4y_SuperCap.SchDoc  PowerSupply.SchDoc
Hardware/Project Outputs for G4y_SuperCap/Production_PG_Enable/: Status Report.Txt
Hardware/Project Outputs for G4y_SuperCap/Production_PG_Enable/BOM/: Bill of Materials-G4y_SuperCap(Production_PG_Enable).xlsx
Hardware/Project Outputs for G4y_SuperCap/Production_PG_Enable/Gerber/: G4y_SuperCap.EXTREP  G4y_SuperCap.GBL  G4y_SuperCap.GBO  G4y_SuperCap.GBP  G4y_SuperCap.GBS  G4y_SuperCap.GKO  G4y_SuperCap.GM  G4y_SuperCap.GTL  G4y_SuperCap.GTO  G4y_SuperCap.GTP  G4y_SuperCap.GTS  G4y_SuperCap.REP  G4y_SuperCap.RUL
Hardware/Project Outputs for G4y_SuperCap/Production_PG_Enable_noDisplay/: Status Report.Txt
boards/G4y/g4y_beacon_supercap/: Kconfig.g4y_beacon_supercap  board.cmake  board.yml  g4y_beacon_supercap.yml
images/: Beacon_SuperCap_24062026.hex  Beacon_SuperCap_26062026.hex
inc/: GDEW0154M10.h  NfcTag.h  main.h
src/: GDEW0154M10.c  NfcTag.c  epaper.c  qrcode.c
(+24 files in other folders)
